# modula-rs

./: .gitignore  Cargo.toml  README.md  deny.toml  typos.toml
.cargo/: mutants.toml
crates/cargo-modula/: Cargo.toml
crates/cargo-modula/src/: main.rs
crates/cargo-modula/tests/: cli.rs
crates/modula-corpus/: Cargo.toml  README.md
crates/modula-corpus/migrations/2026-01-01-000000_init/: down.sql  up.sql
crates/modula-corpus/migrations/2026-01-02-000000_add_released_at/: down.sql  up.sql
crates/modula-corpus/migrations/2026-01-03-000000_collapse_structural_terms/: down.sql  up.sql
crates/modula-corpus/src/: convert.rs  db.rs  dump.rs  embed.rs  extract.rs  http.rs  main.rs  meta.rs  models.rs  plot.rs  schema.rs  sweep.rs
crates/modula-extract/: Cargo.toml
crates/modula-extract-api/: Cargo.toml
crates/modula-extract-api/src/: builder.rs  lib.rs
crates/modula-extract-scip/: Cargo.toml
crates/modula-extract-scip/src/: lib.rs
crates/modula-extract-scip/tests/: lower.rs  lower_cpp.rs  lower_csharp.rs  lower_go.rs  lower_java.rs  lower_py.rs
crates/modula-extract-scip/tests/fixtures/sample-cpp/: CMakeLists.txt  index.scip  main.cpp
crates/modula-extract-scip/tests/fixtures/sample-cpp/app/: app.cpp  app.h
crates/modula-extract-scip/tests/fixtures/sample-cpp/mathx/: mathx.cpp  mathx.h
crates/modula-extract-scip/tests/fixtures/sample-csharp/: Calc.cs  Mathx.cs  Program.cs  index.scip  sample-csharp.csproj
crates/modula-extract-scip/tests/fixtures/sample-go/: index.scip  main.go
crates/modula-extract-scip/tests/fixtures/sample-go/mathx/: mathx.go
crates/modula-extract-scip/tests/fixtures/sample-java/: index.scip  pom.xml
crates/modula-extract-scip/tests/fixtures/sample-java/src/main/java/com/example/: Main.java
crates/modula-extract-scip/tests/fixtures/sample-py/: index.scip  pyproject.toml
crates/modula-extract-scip/tests/fixtures/sample-py/sample_py/: main.py  mathx.py
crates/modula-extract-scip/tests/fixtures/sample-ts/: index.scip  package.json  tsconfig.json
crates/modula-extract-scip/tests/fixtures/sample-ts/src/util/: math.ts
crates/modula-extract-ts/: Cargo.toml
crates/modula-extract-ts/src/: lib.rs
crates/modula-extract-ts/tests/: walk.rs
crates/modula-extract-ts/tests/fixtures/sample/: index.ts
crates/modula-extract-ts/tests/fixtures/sample/util/: math.ts
crates/modula-extract/src/: lib.rs  ra.rs
crates/modula-extract/tests/: spike.rs
crates/modula-extract/tests/fixtures/adts/: Cargo.toml
crates/modula-extract/tests/fixtures/adts/src/: lib.rs
crates/modula-extract/tests/fixtures/bodymacro/: Cargo.toml
crates/modula-extract/tests/fixtures/bodymacro/src/: lib.rs
crates/modula-extract/tests/fixtures/bounds/: Cargo.toml
crates/modula-extract/tests/fixtures/bounds/src/: lib.rs
crates/modula-extract/tests/fixtures/consts/: Cargo.toml
crates/modula-extract/tests/fixtures/consts/src/: lib.rs
crates/modula-extract/tests/fixtures/fields/: Cargo.toml
crates/modula-extract/tests/fixtures/fields/src/: lib.rs
crates/modula-extract/tests/fixtures/flat/: Cargo.toml
crates/modula-extract/tests/fixtures/flat/src/: lib.rs
crates/modula-extract/tests/fixtures/globchain/: Cargo.toml
crates/modula-extract/tests/fixtures/globchain/src/: lib.rs
crates/modula-extract/tests/fixtures/imports/: Cargo.toml
crates/modula-extract/tests/fixtures/imports/src/: a.rs  b.rs  lib.rs
crates/modula-extract/tests/fixtures/nonlocal/: Cargo.toml
crates/modula-extract/tests/fixtures/nonlocal/src/: lib.rs
crates/modula-extract/tests/fixtures/procderive/: Cargo.toml
crates/modula-extract/tests/fixtures/procderive/procderive_macro/: Cargo.toml
crates/modula-extract/tests/fixtures/procderive/procderive_macro/src/: lib.rs
crates/modula-extract/tests/fixtures/procderive/src/: lib.rs
crates/modula-extract/tests/fixtures/procfn/: Cargo.toml
crates/modula-extract/tests/fixtures/procfn/procfn_macro/: Cargo.toml
crates/modula-extract/tests/fixtures/procfn/procfn_macro/src/: lib.rs
crates/modula-extract/tests/fixtures/procfn/src/: lib.rs
crates/modula-extract/tests/fixtures/reexport/: Cargo.toml
crates/modula-extract/tests/fixtures/reexport/src/: globbed.rs  lib.rs  private.rs
crates/modula-extract/tests/fixtures/rich/: Cargo.toml
crates/modula-extract/tests/fixtures/rich/src/: lib.rs  logic.rs  types.rs
crates/modula-extract/tests/fixtures/spike/: Cargo.toml
crates/modula-extract/tests/fixtures/spike/src/: a.rs  b.rs  lib.rs
crates/modula-extract/tests/fixtures/stdgen/: Cargo.toml
crates/modula-extract/tests/fixtures/stdgen/src/: lib.rs
crates/modula-extract/tests/fixtures/targets/: Cargo.toml
crates/modula-extract/tests/fixtures/targets/src/: api.rs  internal.rs  lib.rs
crates/modula-extract/tests/fixtures/targets/tests/: it.rs
crates/modula-extract/tests/fixtures/traits/: Cargo.toml
crates/modula-extract/tests/fixtures/traits/src/: lib.rs
crates/modula-extract/tests/snapshots/: spike__rich_captures_signature_impl_and_method_edges.snap  spike__spike_captures_body_level_cross_module_edge.snap  spike__trait_items_impl_bounds_and_impl_trait_produce_edges.snap
crates/modula-ir/: Cargo.toml
crates/modula-ir/src/: container.rs  edge.rs  ids.rs  item.rs  krate.rs  lib.rs  module.rs  visibility.rs
crates/modula-ir/tests/: roundtrip.rs
crates/modula-metrics/: Cargo.toml
crates/modula-metrics/src/: analysis.rs  cohesion.rs  coupling.rs  cycles.rs  divergence.rs  encapsulation.rs  findings.rs  graph.rs  lib.rs  modularity.rs  module_graph.rs  report.rs  score.rs  weighting.rs
crates/modula-metrics/tests/: analysis.rs  coupling_cycles.rs  divergence.proptest-regressions  divergence.rs  encapsulation.rs  graph_modularity.rs  modularity_profile.rs
crates/modula-metrics/tests/common/: mod.rs
crates/modula-metrics/tests/fixtures/: divergence_sklearn.json  gen_divergence.py
crates/modula-metrics/tests/snapshots/: analysis__human_report_snapshot.snap
crates/modula-web/: .gitignore  Cargo.toml
crates/modula-web/samples/: imagesize.bin.zst
crates/modula-web/src/: main.rs
(+15 files in other folders)
