[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"
repository = "https://github.com/LucaCappelletti94/modula-rs"
authors = ["Luca Cappelletti <cappelletti.luca94@gmail.com>"]

[workspace.dependencies]
# Internal crates
modula-ir = { path = "crates/modula-ir" }
modula-extract = { path = "crates/modula-extract" }
modula-metrics = { path = "crates/modula-metrics" }

# Graph backend
geometric-traits = { git = "https://github.com/earth-metabolome-initiative/geometric-traits", branch = "main", features = ["alloc"] }

# Shared third-party
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

# Dev
insta = { version = "1", features = ["json"] }
proptest = "1"
approx = "0.5"
